# snowhead

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: attacks.rs  bench.rs  build.rs  evaluate.rs  lib.rs  main.rs  movegen.rs  movepick.rs  perft.rs  position.rs  psqt.rs  rng.rs  search.rs  textel.rs  timeman.rs  tt.rs  tune.rs  types.rs  uci.rs  uciset.rs  zobrist.rs
src/attacks/: attack_bb.rs  attack_tables.rs  magics.rs
src/attacks/attack_bb/: attack_bb_test.rs
src/bench/: bench.epd  epd.rs
src/evaluate/: psqt.rs  score.rs
src/movegen/: movegen_test.rs  movepick.rs  movevalue.rs
src/position/: builder.rs  fen.rs  game.rs  inline.rs
src/position/game/: game_test.rs
src/psqt/: psqt_test.rs
src/search/: perft.rs  pv.rs  rootmoves.rs  thread.rs
src/test_data/: perft_info.rs
src/types/: bitboard.rs  move.rs  piece.rs  score.rs  square.rs
src/types/square/: square_test.rs
src/uci/: command.rs  option.rs
tune/: play.py  test.pgn
tuner/: pyvenv.cfg
tuner/extract/: extract.py  pgn-extract
